RESOLVED FIXED280403
TestRunner.forceImmediateCompletion() hangs with site isolation
https://bugs.webkit.org/show_bug.cgi?id=280403
Summary TestRunner.forceImmediateCompletion() hangs with site isolation
Kimmo Kinnunen
Reported 2024-09-26 05:54:12 PDT
TestRunner.forceImmediateCompletion() hangs with site isolation related to bug 268471
Attachments
Radar WebKit Bug Importer
Comment 1 2024-09-26 05:54:22 PDT
Kimmo Kinnunen
Comment 2 2024-09-26 06:07:49 PDT
EWS
Comment 3 2024-10-23 01:15:03 PDT
Committed 285592@main (34863c0ae258): <https://commits.webkit.org/285592@main> Reviewed commits have been landed. Closing PR #34297 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.